Some image update and pre-work for Progress Graph feature.

--- a/schoolApp/src/main/res/values/strings.xml
+++ b/schoolApp/src/main/res/values/strings.xml
@@ -369,6 +369,7 @@ Get updates on recent on goings and feeds from your school teachers.</string>
 
     <!-- TERM REPORT -->
     <string name="title_term_report_tab">Term Report</string>
+    <string name="title_progress_graph_tab">Progress Graph</string>
 
     <!-- ROUTINE -->
     <string name="title_class_routine">Class Routine</string>
