--- a/schoolApp/src/main/res/values/strings.xml
+++ b/schoolApp/src/main/res/values/strings.xml
@@ -73,6 +73,7 @@
         <item>reportcard</item>
         <item>academic_calendar</item>
         <item>transport</item>
+        <item>lesson_plan</item>
 
     </string-array>
     
@@ -90,6 +91,7 @@
         <item>ParentReportCardFragment</item>
         <item>ParentAcademicCalender</item>
         <item>TransportFragment</item>
+        <item>LessonPlanStudentParent</item>
 
     </string-array>
     
@@ -107,6 +109,7 @@
         <item>Reportcard</item>
         <item>Academic Calendar</item>
         <item>Transport</item>
+        <item>Lesson Plan</item>
 
     </string-array>
     
@@ -127,6 +130,7 @@
         <item>transport</item>
         <item>leaveapplication</item>
         <item>fees</item>
+        <item>lesson_plan</item>
 
     </string-array>
     
@@ -147,6 +151,7 @@
         <item>Transport</item>
         <item>Leave Application</item>
         <item>Fees</item>
+        <item>Lesson Plan</item>
 
     </string-array>
     
@@ -167,6 +172,7 @@
         <item>TransportFragment</item>
         <item>ApplyForLeaveFragment</item>
         <item>FeesTabhostFragment</item>
+        <item>LessonPlanStudentParent</item>
 
     </string-array>
     
@@ -186,6 +192,7 @@
         <item>transport</item>
         <item>reportcard</item>
         <item>academic_calendar</item>
+        <item>lesson_plan</item>
 
     </string-array>
     
@@ -204,6 +211,7 @@
         <item>Transport</item>
         <item>Reportcard</item>
         <item>Academic Calendar</item>
+        <item>Lesson Plan</item>
 
     </string-array>
     
@@ -222,6 +230,7 @@
         <item>TransportFragment</item>
         <item>ParentReportCardFragment</item>
         <item>ParentAcademicCalender</item>
+        <item>LessonPlanTeacher</item>
 
     </string-array>
     
