--- a/schoolApp/src/main/res/values/strings.xml
+++ b/schoolApp/src/main/res/values/strings.xml
@@ -238,6 +238,7 @@
     </string-array>
     
     <string-array name="free_menus_images">
+        <item>spellingbee_bee_icon</item>
         <item>resource</item>
         <item>newsarticle</item>
         <item>entertainment</item>
@@ -252,6 +253,7 @@
         <!-- <item>video</item> -->
     </string-array>
     <string-array name="free_menus_text">
+        <item>Spelling Bee</item>
         <item>Resource Centre</item>
         <item>News \u0026 Articles</item>
         <item>Entertainment</item>
@@ -266,6 +268,7 @@
         <!-- <item>Videos</item> -->
     </string-array>
     <string-array name="free_menus_id">
+        <item>7</item>
         <item>6</item>
         <item>38</item>
         <item>3</item>
