--- a/schoolApp/src/main/res/values/strings.xml
+++ b/schoolApp/src/main/res/values/strings.xml
@@ -239,6 +239,7 @@
     
     <string-array name="free_menus_images">
         <item>spellingbee_bee_icon</item>
+        <item>spellingbee_newbee_icon</item>
         <item>resource</item>
         <item>newsarticle</item>
         <item>entertainment</item>
@@ -253,6 +254,7 @@
         <!-- <item>video</item> -->
     </string-array>
     <string-array name="free_menus_text">
+        <item>Play Spelling Bee</item>
         <item>Spelling Bee</item>
         <item>Resource Centre</item>
         <item>News \u0026 Articles</item>
@@ -268,6 +270,7 @@
         <!-- <item>Videos</item> -->
     </string-array>
     <string-array name="free_menus_id">
+        <item>-7</item>
         <item>7</item>
         <item>6</item>
         <item>38</item>
