1. Added new spelling be again in master with string about us text changed.

--- a/schoolApp/src/main/res/values/strings.xml
+++ b/schoolApp/src/main/res/values/strings.xml
@@ -507,6 +507,10 @@ Get updates on recent on goings and feeds from your school teachers.</string>
         <p>
             With realization to all the factor that are there in the system which demands an immediate action for a better educational method, Champs21.com is determined to provide the best standard education in every corner of the country.
         </p>
+
+         <p>
+            <b>Current Version: 1.0.6</b>
+        </p>
         
     ]]>
     </string>
