1. Added new class tune font breeserif_regular.otf in assets/fonts folder. 2. Added activity classes and associated models, adapters, interfaces, layouts, drawables, strings, colors etc.

--- a/schoolApp/src/main/res/values/strings.xml
+++ b/schoolApp/src/main/res/values/strings.xml
@@ -541,5 +541,7 @@ Get updates on recent on goings and feeds from your school teachers.</string>
     <string name="title_activity_syllabus">SyllabusActivity</string>
     <string name="title_activity_student_info">StudentInfoActivity</string>
 
+    <string name="album_name_classtune">classtune</string>
+
 
 </resources>
